# AWS-Agent

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  start-dev.bat
LangChainAgent/agent/: aws_agent.py
LangChainAgent/rag/: __init__.py  loader.py  retriever.py
LangChainAgent/rag/company_faiss.index/: index.pkl
LangChainAgent/tools/: __init__.py  ec2_tool.py  tools.py
api/: app.py
backend/: __init__.py  main.py  requirements.txt
backend/app/agents/: aws_agent.py
backend/app/api/: app.py
backend/app/rag/: loader.py  retriever.py  vector_store.py
backend/app/rag/company_faiss.index/: index.faiss  index.pkl
backend/app/tools/: __init__.py  rds_tool.py
frontend/: FEATURES.md  FORMATTING.md  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthPage.jsx  ChatInput.jsx  ChatWindow.jsx  Header.jsx  MessageBubble.jsx  ResourceDetail.jsx  Sidebar.jsx  ToolExecution.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
knowledge/company_docs/: .gitkeep
