[project]
name = "aws-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "langchain==0.2.6",
    "langchain-core<0.3.0,>=0.2.10",
    "langchain-text-splitters<0.3.0,>=0.2.0",
    "langsmith<0.2.0,>=0.1.17",
    "langchain-aws==0.1.9",
    "langchain-anthropic==0.1.19",
    "boto3==1.34.144",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "langchain-openai>=0.1.25",
    "faiss-cpu==1.14.3",
    "pypdf==6.14.2",
]
